--- a/css/slides.css
+++ b/css/slides.css
@@ -146,6 +146,9 @@ p {
 	line-height: 1.5;
 	margin-bottom: 30px;
 	opacity: 0.9;
+	letter-spacing: -.003em;
+  --x-height-multiplier: 0.375;
+  --baseline-multiplier: 0.17;
 }
 
 p.hero {
