--- a/css/slides.css
+++ b/css/slides.css
@@ -1285,13 +1285,14 @@ section.network .logos .row>div:nth-child(odd) {
 
 /*iphone4+*/
 
-@media only screen and (min-width: 320px) and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
 	#landingHeader .container {max-height: 480px;}
 	#landingHeader .wrap {padding:0 !important;}
 	.customFooter img {max-width: 250px !important;}
 	#contactModal h3 {font-size: 18px;}
 	#contactModal p {font-size: 14px !important;}
 	#contactModal a {font-size: 18px !important;}
+	#team li {width: 100% !important;}
 	h1 {
 		font-size: 33px !important;
 	}
