--- a/css/slides.css
+++ b/css/slides.css
@@ -1286,6 +1286,7 @@ section.network .logos .row>div:nth-child(odd) {
 /*iphone4+*/
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
+	.padding-5 {padding: 15px !important;}
 	#landingHeader .container {max-height: 480px;}
 	#landingHeader .wrap {padding:0 !important;}
 	.customFooter img {max-width: 250px !important;}
@@ -2052,7 +2053,9 @@ p.micro, .p.micro {
 .margin-top-1 {
 	margin-top: 10% !important;
 }
-
+.padding-5 {
+	padding: 50px;
+}
 .container .wrap * {
 	user-select: text;
 }
