--- a/css/slides.css
+++ b/css/slides.css
@@ -9,9 +9,12 @@
 }
 
 body, html, img {
-	max-width: 100%
+	max-width: 100%;
 }
-
+img {
+	color: #47525D !important;
+	font-style: bold;
+}
 .slides, html {
 	font-family: "Source Sans Pro", sans-serif
 }
