--- a/css/slides.css
+++ b/css/slides.css
@@ -656,7 +656,7 @@ p.hero {
 		display: -ms-flexbox;
 		display: flex;
 		color: #fff;
-		border-radius: 3px;
+		border-radius: 5px;
 		-webkit-transition: .2s ease-out;
 		transition: .2s ease-out;
 		overflow: hidden;
@@ -671,9 +671,12 @@ p.hero {
 		-webkit-backface-visibility: hidden;
 		backface-visibility: hidden;
 		will-change: transform, box-shadow;
-		width: 230px;
-		height: 270px;
+		width: 200px;
+		height: 260px;
 
+}
+.card img {
+	padding-bottom: 15px;
 }
 .card:hover {
     -webkit-transform: perspective(1000px) rotateY(-10deg) translate3d(-3px,0,0);
