--- a/css/slides.css
+++ b/css/slides.css
@@ -673,10 +673,22 @@ p.hero {
 		will-change: transform, box-shadow;
 		width: 200px;
 		height: 260px;
-
 }
 .card img {
-	padding-bottom: 15px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: bottom center;
+    object-position: bottom center;
+		padding-bottom: 15px;
+}
+.cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: .2s ease-out;
+    transition: .2s ease-out;
 }
 .card:hover {
     -webkit-transform: perspective(1000px) rotateY(-10deg) translate3d(-3px,0,0);
