Entered the final stages of the new service sub page

--- a/css/slides.css
+++ b/css/slides.css
@@ -150,15 +150,18 @@ h3 {
 }
 
 p {
-	font-size: 20px;
-	line-height: 1.5;
-	margin-bottom: 30px;
-	opacity: .9;
-	letter-spacing: -.003em;
-	--x-height-multiplier: 0.375;
-	--baseline-multiplier: 0.17
+	font-family: 'Open Sans','Segoe UI',sans-serif;
+	font-weight: 400;
+	font-size: 17px;
+	line-height: 28px;
+	margin-bottom: 20px;
 }
-
+.common-IntroText {
+    font-weight: 300;
+    font-size: 36px;
+    line-height: 46px;
+    color: #424770;
+}
 p.hero {
 	font-size: 26px;
 	line-height: 1.25;
@@ -381,7 +384,6 @@ p.hero {
 		width: 100%!important
 	}
 }
-
 .photobanner {
 	width: 5300px;
 	height: 600px;
@@ -711,14 +713,233 @@ p.hero {
 .img-size {
 	max-width: 900px
 }
+.StripeBackground {
+    top: 0;
+    height: 608px;
+    z-index: -1;
+}
+.StripeBackground {
+    position: absolute;
+    left: 0;
+    right: 0;
+    -webkit-transform: skewY(-12deg);
+    transform: skewY(-12deg);
+    pointer-events: none;
+}
+.StripeBackground .s0 {
+    bottom: 0;
+    height: 1000px;
+    background: -webkit-gradient(linear,left top,left bottom,from(rgba(230,235,241,.45)),to(rgba(246,249,252,.5)));
+    background: linear-gradient(180deg,rgba(230,235,241,.45),rgba(246,249,252,.5));
+}
+.StripeBackground .s2 {
+    bottom: 190px;
+    background: #f6f9fc;
+    right: 70%;
+}
+.StripeBackground .s3 {
+    bottom: 380px;
+    background: #f6f9fc;
+}
+.StripeBackground .s4 {
+    bottom: 570px;
+    background: -webkit-gradient(linear,left top,right top,from(#f6f9fc),to(#e6ebf1));
+    background: linear-gradient(90deg,#f6f9fc,#e6ebf1);
+}
+.StripeBackground .stripe {
+    height: 190px;
+}
+.StripeBackground .stripe {
+    position: absolute;
+    top: auto;
+    left: 0;
+    right: 0;
+}
+.bread-crumbs {
+    left: 0;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-align: center;
+    width: calc(100% - 110px);
+    -webkit-box-align: center;
+    align-items: center;
+    white-space: nowrap;
+    font-size: 13px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    z-index: 501;
+		margin: 0 0 20px 0;
+}
+.bread-crumbs a {
+	margin-right: 7px;
+	color: #1072BB;
+	font-weight: 600;
+}
+.form-section {
+    max-height: 1200px;
+    opacity: 1;
+    -webkit-transition: max-height .7s;
+    transition: max-height .7s;
+        transition-delay: 0s;
+    will-change: max-height;
+    -webkit-transition-delay: .4s;
+    transition-delay: .4s;
+}
+.form-section {
+    position: relative;
+    padding-bottom: 50px;
+    margin-top: -10px;
+}
+.form-section {
+	padding: 50px 0 85px 0;
+}
+.form-section .container-lg {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+.form-section .copy-1 {
+	font-size: 24px;
+	font-weight: 400;
+}
 
+.form-section .copy-2 {
+	font-size: 19px;
+}
+section .form-column {
+	-webkit-box-flex: 6;
+	-ms-flex: 6;
+	flex: 6;
+	padding-bottom: 0;
+}
+.secondary-column > :first-child {
+    padding-left: 50px;
+    padding-right: 0;
+}
+.customers {
+    -webkit-box-align: normal;
+    -ms-flex-align: normal;
+    align-items: normal;
+    padding-bottom: 0;
+    padding-top: 100px;
+}
+.form-section .secondary-column {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 645px;
+}
+.secondary-column {
+    -webkit-box-flex: 4;
+    -ms-flex: 4;
+    flex: 4;
+    max-width: none;
+    margin-left: 0;
+    margin-right: 0;
+}
+.customer-logos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: left;
+    -ms-flex-pack: left;
+    justify-content: left;
+		width: 110%;
+}
+.customer-logo {
+    margin: 0 30px 20px 0;
+}
+.formBackground {
+	border-radius: 4px;
+	-webkit-box-shadow: 0 50px 100px rgba(50,50,93,.1),0 15px 35px rgba(50,50,93,.15),0 5px 15px rgba(0,0,0,.1);
+	box-shadow: 0 50px 100px rgba(50,50,93,.1),0 15px 35px rgba(50,50,93,.15),0 5px 15px rgba(0,0,0,.1);
+	max-width: 645px;
+	background: #fff;
+	margin: 0 auto;
+	width: 100%;
+	margin-bottom: 50px;
+}
+section.ctas {
+    opacity: 1;
+    max-height: 500px;
+    -webkit-transition: max-height .7s;
+    transition: max-height .7s;
+        transition-delay: 0s;
+    will-change: max-height;
+    -webkit-transition-delay: .5s;
+    transition-delay: .5s;
+    background: transparent;
+    padding-bottom: 90px;
+    padding-right: 0;
+}
+section.ctas {
+    position: relative;
+    padding-bottom: 55px;
+    padding-right: 10px;
+}
+section.ctas .cta .cta-copy {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 26px;
+}
+section.ctas .cta .icon-column {
+    min-width: 45px;
+    padding-bottom: 15px;
+}
+section.ctas .cta .copy-column {
+    max-width: 385px;
+    padding-left: 20px;
+    -webkit-box-flex: 2;
+    -ms-flex-positive: 2;
+    flex-grow: 2;
+    padding-right: 20px;
+}
+section.ctas .cta {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: none;
+}
+section.ctas .container-lg {
+    padding: 0 20px;
+    -webkit-box-pack: normal;
+    -ms-flex-pack: normal;
+    justify-content: normal;
+}
+section.ctas .container-lg {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding-left: 45px;
+    padding-right: 45px;
+}
+section.ctas .cta .cta-headline {
+    font-weight: 500;
+    font-size: 19px;
+    line-height: 28px;
+    margin-bottom: 5px;
+}
+.cta-copy .common-Link {
+	font-size: 16px;
+}
 .globalFooterCard img {
 	max-width: 600px;
 	width: 100%;
 	margin: -5px;
 	border-radius: 4px
 }
-
+.float-left {
+	float: left;
+}
 #newsletter .center-m-down {
 	margin-bottom: 50px
 }
@@ -1307,6 +1528,9 @@ a.globalFooterCard {
 	#career h1 {
 		font-size: 45px;
 		margin-top: 110px
+	}
+	.form-section .container-lg {
+		display: inline !important;
 	}
 }
 
