--- a/css/slides.css
+++ b/css/slides.css
@@ -1326,6 +1326,10 @@ a.globalFooterCard {
 }
 
 @media only screen and (min-width:320px) and (max-width:480px) {
+	.service-text p {
+		font-size: 16px;
+	}
+	.common-IntroText {font-size: 30px;}
 	#documentSlide h2 {
 		font-size: 28px
 	}
@@ -1531,6 +1535,9 @@ a.globalFooterCard {
 	}
 	.form-section .container-lg {
 		display: inline !important;
+	}
+	.bread-crumbs {
+		margin-top: 120px;
 	}
 }
 
