--- a/css/slides.css
+++ b/css/slides.css
@@ -1143,7 +1143,7 @@ a.globalFooterCard {
 
 .customFooter {
 	background: #f6f9fc;
-	color: #424770;
+	color: #47525d;
 }
 .customFooter h3 {
 	font-size: 14px;
