--- a/css/slides.css
+++ b/css/slides.css
@@ -189,6 +189,12 @@ p {
 #enterprise .common-IntroText {
 	font-size: 46px;
 }
+#nyheter .pad-header {
+	padding: 15px 0 15px 20px;
+}
+#nyheter h3 {
+	font-weight: 600;
+}
 p.hero {
 	font-size: 26px;
 	line-height: 1.25;
@@ -661,7 +667,7 @@ p.hero {
 }
 
 .border-bottom-grey {
-	border-bottom: 2px solid #6D92A3;
+	border-bottom: 1px solid rgba(7,96,115,.15);
 	width: 50%;
 	padding-bottom: 20px;
 	margin: 0 auto
@@ -2190,13 +2196,11 @@ a.underline {
 	max-width: 364px!important
 }
 
-.pad.shadow {
-	box-shadow: 0 35px 54px rgba(0, 0, 0, .3), 0 5px 20px rgba(0, 0, 0, .07), 0 0 1px rgba(0, 0, 0, .12)
-}
-
 .pad {
-	border-radius: 8px;
-	background: #fff
+	border-radius: 4px;
+	background: #fff;
+	-webkit-box-shadow: 0 50px 100px rgba(50,50,93,.1),0 15px 35px rgba(50,50,93,.15),0 5px 15px rgba(0,0,0,.1);
+	box-shadow: 0 50px 100px rgba(50,50,93,.1),0 15px 35px rgba(50,50,93,.15),0 5px 15px rgba(0,0,0,.1);
 }
 
 .pad-header {
