--- a/css/slides.css
+++ b/css/slides.css
@@ -195,6 +195,10 @@ p {
 #nyheter h3 {
 	font-weight: 600;
 }
+#nyheter .pad {
+	-webkit-box-shadow: 0 1px 5px 0 rgba(0,0,0,.07),0 7px 17px 0 rgba(0,0,0,.1);
+	box-shadow: 0 1px 5px 0 rgba(0,0,0,.07),0 7px 17px 0 rgba(0,0,0,.1);
+}
 p.hero {
 	font-size: 26px;
 	line-height: 1.25;
