--- a/css/slides.css
+++ b/css/slides.css
@@ -189,15 +189,18 @@ p {
 #enterprise .common-IntroText {
 	font-size: 46px;
 }
-#nyheter .pad-header {
+#news-section .pad-header {
 	padding: 15px 0 15px 20px;
 }
-#nyheter h3 {
+#news-section h3 {
 	font-weight: 600;
 }
-#nyheter .pad {
+#news-section .pad {
 	-webkit-box-shadow: 0 1px 5px 0 rgba(0,0,0,.07),0 7px 17px 0 rgba(0,0,0,.1);
 	box-shadow: 0 1px 5px 0 rgba(0,0,0,.07),0 7px 17px 0 rgba(0,0,0,.1);
+}
+#landingHeader .container {
+	height: 500px;
 }
 p.hero {
 	font-size: 26px;
@@ -1396,6 +1399,15 @@ margin: 0 0 5px;
 }
 
 @media only screen and (min-width:320px) and (max-width:480px) {
+	#pr-widget p {
+		font-size: 16px;
+	}
+	#news p {
+		font-size: 16px;
+	}
+	#landingHeader .container {
+		height: 280px;
+	}
 	.slide {
 		-webkit-transform: none !important;
 		transform: none !important;
