--- a/css/slides.css
+++ b/css/slides.css
@@ -1397,7 +1397,15 @@ margin: 0 0 5px;
 .disable-pointer-events {
 	pointer-events: none!important
 }
-
+#contactHeader {
+	max-height: 100% !important;
+	padding: 0 !important;
+}
+#contactHeader .pad {
+	max-width: 650px;
+	width:100%;
+	margin: 0 auto;
+}
 @media only screen and (min-width:320px) and (max-width:480px) {
 	#pr-widget p {
 		font-size: 16px;
