--- a/css/slides.css
+++ b/css/slides.css
@@ -1048,10 +1048,36 @@ section.ctas .cta .cta-headline {
 	flex-wrap: wrap;
 	margin: -10px
 }
-
 .common-ButtonGroup .common-Button {
 	flex-shrink: 0;
 	margin: 5px
+}
+.inactive-Overlay {
+	opacity: .7;
+	-webkit-transform: scale(.95);
+	transform: scale(.95);
+	-webkit-filter: blur(10px);
+	filter: blur(5px);
+	pointer-events : none;
+}
+.inactive-Button {
+	background: rgba(255,255,255,0.80);
+	border: 2px solid rgba(255,255,255,0.80);
+    white-space: nowrap;
+    display: inline-block;
+    height: 50px;
+    line-height: 50px;
+    padding: 0 30px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
+    border-radius: 4px;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: .025em;
+    outline: 0;
+    border: none;
+    -webkit-transition: all .15s ease;
+    transition: all .15s ease;
 }
 .common-Link:focus, .common-Link:hover {
     color: #32325d;
@@ -1204,6 +1230,81 @@ a.globalFooterCard {
 }
 .common-Card img {
 	border-radius: 4px;
+}
+[data-tooltip] {
+	position:relative;
+	cursor:pointer;
+	border-bottom: 1px dotted;
+}
+.new-pill {
+    padding: 0 6px;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 600;
+    background: #FF5B5C;
+		color: #fff;
+    text-transform: uppercase;
+    border-radius: 10px;
+		margin-right: 5px;
+}
+.announcement {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 10px 10px;
+		border-radius: 4px;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 500;
+    text-decoration: none;
+    background: rgba(0,0,140,.08);
+		margin-bottom: 15px;
+}
+.formBackground .announcement {
+		z-index: 10000;
+		position: absolute;
+		top: 270px;
+		left: 18%;
+}
+[data-tooltip]:before {
+		content: attr(data-tooltip);
+    position: absolute;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 10px 20px;
+    border-radius: 20px;
+    margin: -6px 0px 25px 5px;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 600;
+    text-decoration: none;
+    background: rgba(255,255,255,0.90);
+}
+[data-tooltip].onTop:before {
+	-webkit-transform: translateY(-50%) translateX(-50%) scale(0);
+	transform: translateY(-50%) translateX(-50%) scale(0);
+}
+[data-tooltip]:hover:before {
+	-webkit-transform: translateY(100%) translateX(-50%) scale(1);
+	transform: translateY(100%) translateX(-50%) scale(1);
+	opacity:1;
+	visibility: visible;
+}[data-tooltip] {
+	 position:relative;
+	 cursor:pointer;
+}
+[data-tooltip].onTop:hover:before {
+	-webkit-transform: translateY(100%) translateX(-50%) scale(1);
+	transform: translateY(-100%) translateX(-50%) scale(1);
+	opacity: 1;
+	visibility: visible;
 }
 .customFooter {
 	background: #f6f9fc;
@@ -1407,6 +1508,9 @@ margin: 0 0 5px;
 	margin: 0 auto;
 }
 @media only screen and (min-width:320px) and (max-width:480px) {
+	.formBackground .announcement {
+		left: 0 !important;
+	}
 	#pr-widget p {
 		font-size: 16px;
 	}
