--- a/css/slides.css
+++ b/css/slides.css
@@ -1251,6 +1251,9 @@ a.globalFooterCard {
     border-radius: 10px;
 		margin-right: 5px;
 }
+.message {
+	color: #424770;
+}
 .announcement {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -1259,7 +1262,7 @@ a.globalFooterCard {
     -ms-flex-align: center;
     align-items: center;
     padding: 10px 10px;
-		border-radius: 4px;
+		border-radius: 6px;
     font-size: 14px;
     line-height: 17px;
     font-weight: 500;
@@ -1267,49 +1270,7 @@ a.globalFooterCard {
     background: rgba(0,0,140,.08);
 		margin-bottom: 15px;
 }
-.formBackground .announcement {
-		z-index: 10000;
-		position: absolute;
-		top: 270px;
-		left: 19%;
-}
-[data-tooltip]:before {
-		content: attr(data-tooltip);
-    position: absolute;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 10px 20px;
-    border-radius: 20px;
-    margin: -6px 0px 25px 5px;
-    font-size: 14px;
-    line-height: 17px;
-    font-weight: 600;
-    text-decoration: none;
-    background: rgba(255,255,255,0.90);
-}
-[data-tooltip].onTop:before {
-	-webkit-transform: translateY(-50%) translateX(-50%) scale(0);
-	transform: translateY(-50%) translateX(-50%) scale(0);
-}
-[data-tooltip]:hover:before {
-	-webkit-transform: translateY(100%) translateX(-50%) scale(1);
-	transform: translateY(100%) translateX(-50%) scale(1);
-	opacity:1;
-	visibility: visible;
-}[data-tooltip] {
-	 position:relative;
-	 cursor:pointer;
-}
-[data-tooltip].onTop:hover:before {
-	-webkit-transform: translateY(100%) translateX(-50%) scale(1);
-	transform: translateY(-100%) translateX(-50%) scale(1);
-	opacity: 1;
-	visibility: visible;
-}
+
 .customFooter {
 	background: #f6f9fc;
 	color: #47525d;
@@ -1517,16 +1478,9 @@ margin: 0 0 5px;
 @media only screen and (min-width:320px) and (max-width:480px) {
 	.leftControl-83 {margin-left: -10px !important;}
 	.rightControl-83 {margin-right: 10px !important;}
-	.formBackground .announcement {
-		left: 0 !important;
-	}
-	#pr-widget p {
-		font-size: 16px;
-	}
-
-	#news p {
-		font-size: 16px;
-	}
+	.formBackground .announcement {left: 0 !important;}
+	#pr-widget p {font-size: 16px;}
+	#news p {font-size: 16px;}
 	.news-header h1 {
 		font-size: 52px !important;
 		padding-top: 15%;
@@ -1544,12 +1498,8 @@ margin: 0 0 5px;
 	    padding-right: 0;
 	}
 	.form-section {padding: 0;}
-	section.ctas .container-lg {
-		display: inline;
-	}
-	.service-text p {
-		font-size: 16px;
-	}
+	section.ctas .container-lg {display: inline;}
+	.service-text p {font-size: 16px;}
 	.common-IntroText {font-size: 30px;}
 	#documentSlide h2 {
 		font-size: 28px
