--- a/css/slides.css
+++ b/css/slides.css
@@ -667,23 +667,15 @@ p.hero {
 .cc_logo {
 	display: none!important
 }
-
 .center-m-down {
 	margin: 0 auto 25px;
 	text-align: center
 }
-
 .border-bottom-grey {
 	border-bottom: 1px solid rgba(7,96,115,.15);
 	width: 50%;
 	padding-bottom: 20px;
 	margin: 0 auto
-}
-
-.border-bottom {
-	border-bottom: 2px solid #fff;
-	width: 65%;
-	padding-bottom: 10px
 }
 .card {
 		display: -webkit-box;
@@ -1475,7 +1467,19 @@ margin: 0 0 5px;
 #pr-widget .common-Link {
 	margin-top: 15px;
 }
+#mainLanding ul {
+	display: inline-flex;
+}
+#mainLanding ul li {
+	margin: 5px;
+}
+#mainLanding ul li a {
+	min-width: 155px;
+}
+
 @media only screen and (min-width:320px) and (max-width:480px) {
+	#mainLanding .main-Logo {margin-top: 70px;}
+	#mainLanding ul {display: block;}
 	.leftControl-83 {margin-left: -10px !important;}
 	.rightControl-83 {margin-right: 10px !important;}
 	.formBackground .announcement {left: 0 !important;}
@@ -1552,7 +1556,7 @@ margin: 0 0 5px;
 		font-size: 33px!important
 	}
 	p, p.hero {
-		font-size: 20px
+		font-size: 18px
 	}
 	.common-Button {
 		font-size: 14px
@@ -1571,9 +1575,6 @@ margin: 0 0 5px;
 	}
 	.phones .reverse {
 		flex-wrap: wrap!important
-	}
-	.border-bottom {
-		width: 80%
 	}
 	.contact h1 {
 		margin-top: 90px
